--- a/index.html
+++ b/index.html
@@ -419,7 +419,9 @@
                     <p class="footer-link-text">Контактний е-mail</p>
                 </div>
                 <div>
-                    <p class="footer-kiev">Київ <br>вул. Маріупольська, 14.</p>
+                    <p class="footer-kiev">
+                        <a class="footer-kiev" href="#" id="map-link">Київ<br>вул. Маріупольська, 14.</a>
+                    </p>
                     <span class="footer-link-text">Наш магазин</span>
                 </div>
             </div>
