--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <h1 class="header-text"> Букети <span class="header-span">зі свіжих квітів</span> </h1>
             <p class="text-p">З доставкою по Києву протягом 1 години</p>
             <a class="header-btn" href="#">ЗАМОВИТИ КВІТИ</a>
+            <!-- <div id="modal-content" style="display: none;">
+                <h1>Lena pena</h1>
+            </div> -->
         </div>
        <ul class="head-list">
         <li class="head-item">
