--- a/index.html
+++ b/index.html
@@ -342,10 +342,14 @@
             <div class="form-div">
                 <h4 class="form-title"> <span class="form-span">Відправте заявку  <br></span> і Вам зателефонують <br> протягом однієї хвилини</h4>
                 <form class="form" action="#">
-                    <input class="input" type="text" placeholder="Ім’я">
-                    <img class="man-img" src="./images/man.png" width="28px" height="28px" alt="">
-                    <input class="input" type="tel" placeholder="Телефон">
-                    <img class="tel-img" src="./images/tel.png" width="28px" height="28px" alt="">
+                    <div class="input-container">
+                        <input class="input" type="text" placeholder="Ім’я">
+                        <img class="man-img" src="./images/man.png" width="28px" height="28px" alt="">
+                    </div>
+                    <div class="input-container">
+                        <input class="input" type="tel" placeholder="Телефон">
+                        <img class="tel-img" src="./images/tel.png" width="28px" height="28px" alt="">
+                    </div>
                     <button class="form-btn js-btnReq" type="button">Залишити заявку</button>
                 </form>
             </div>
