--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
     <section class="client">
         <h2 class="visually-hidden">Наші клієнти</h2>
         <div class="swiper">
+            <div class="swiper-button-prev "></div>
             <div class="swiper-wrapper">
               <div class="swiper-slide"><img src="./images/1.png" alt=""></div>
               <div class="swiper-slide"><img src="./images/2.png" alt=""></div>
@@ -387,8 +388,8 @@
               <div class="swiper-slide"><img src="./images/3.png" alt=""></div>
               <div class="swiper-slide"><img src="./images/4.png" alt=""></div>
             </div>
-            <div class="swiper-pagination left"></div>
-            <div class="swiper-button-prev right"></div>
+            <div class="swiper-pagination "></div>
+            
             <div class="swiper-button-next"></div>
           </div>
           <hr class="client-line">
