--- a/index.html
+++ b/index.html
@@ -344,11 +344,11 @@
                 <form class="form" action="#">
                     <div class="input-container">
                         <input class="input" type="text" placeholder="Ім’я">
-                        <img class="man-img" src="./images/man.png" width="28px" height="28px" alt="">
+                        <img class="man-img" src="./images/man.png" alt="">
                     </div>
                     <div class="input-container">
                         <input class="input" type="tel" placeholder="Телефон">
-                        <img class="tel-img" src="./images/tel.png" width="28px" height="28px" alt="">
+                        <img class="tel-img" src="./images/tel.png" alt="">
                     </div>
                     <button class="form-btn js-btnReq" type="button">Залишити заявку</button>
                 </form>
